--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
-    <div id="board">
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-    </div>  
+    <div class="starter">
+        <h1 style="font-size:100px;  color: gainsboro;">TIC-TAC-TOE</h1>
+        <div class="start">
+            <button type="button" class="btn btn-light">START</button>
+        </div>
+    </div>
+    <div class="center">
+        <div id="board">
+            <div class="cell"style="border-left: 0px ; border-top:0px"></div>
+            <div class="cell"style="border-top:0px"></div>
+            <div class="cell"style="border-right: 0px ; border-top:0px"></div>
+            <div class="cell"style="border-left: 0px"></div>
+            <div class="cell"></div>
+            <div class="cell"style="border-right: 0px"></div>
+            <div class="cell"style="border-left: 0px ; border-bottom:0px"></div>
+            <div class="cell"style="border-bottom:0px"></div>
+            <div class="cell"style="border-right: 0px ; border-bottom:0px"></div>
+        </div> 
+    </div>
+<script src="tictactoe.js"></script>
 </body>
 </html>
