allow user to start game

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
             <div class="cell"style="border-left: 0px ; border-bottom:0px"></div>
             <div class="cell"style="border-bottom:0px"></div>
             <div class="cell"style="border-right: 0px ; border-bottom:0px"></div>
-        </div> 
+        </div>
+        <div >
+        <div class="restart">
+            <button type="button" class="btn btn-light">RESTART</button>
+        </div>
     </div>
 <script src="tictactoe.js"></script>
 </body>
