allow input from 2 players

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     </div>
     <div class="center">
         <div id="board">
-            <div class="cell"style="border-left: 0px ; border-top:0px"></div>
-            <div class="cell"style="border-top:0px"></div>
-            <div class="cell"style="border-right: 0px ; border-top:0px"></div>
-            <div class="cell"style="border-left: 0px"></div>
-            <div class="cell"></div>
-            <div class="cell"style="border-right: 0px"></div>
-            <div class="cell"style="border-left: 0px ; border-bottom:0px"></div>
-            <div class="cell"style="border-bottom:0px"></div>
-            <div class="cell"style="border-right: 0px ; border-bottom:0px"></div>
+            <div class="cell 0"style="border-left: 0px ; border-top:0px"></div>
+            <div class="cell 1"style="border-top:0px"></div>
+            <div class="cell 2"style="border-right: 0px ; border-top:0px"></div>
+            <div class="cell 3"style="border-left: 0px"></div>
+            <div class="cell 4"></div>
+            <div class="cell 5"style="border-right: 0px"></div>
+            <div class="cell 6"style="border-left: 0px ; border-bottom:0px"></div>
+            <div class="cell 7"style="border-bottom:0px"></div>
+            <div class="cell 8"style="border-right: 0px ; border-bottom:0px"></div>
         </div>
         <div >
         <div class="restart">
