--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     </div>
     <div class="center">
         <div id="board">
-            <div class="cell" style="border-left: 0px ; border-top:0px"></div>
-            <div class="cell" style="border-top:0px"></div>
-            <div class="cell" style="border-right: 0px ; border-top:0px"></div>
-            <div class="cell" style="border-left: 0px"></div>
-            <div class="cell" ></div>
-            <div class="cell" style="border-right: 0px"></div>
-            <div class="cell" style="border-left: 0px ; border-bottom:0px"></div>
-            <div class="cell" style="border-bottom:0px"></div>
-            <div class="cell" style="border-right: 0px ; border-bottom:0px"></div>
+            <div class="cell" id="0"style="border-left: 0px ; border-top:0px"></div>
+            <div class="cell" id="1"style="border-top:0px"></div>
+            <div class="cell" id="2"style="border-right: 0px ; border-top:0px"></div>
+            <div class="cell" id="3"style="border-left: 0px"></div>
+            <div class="cell" id="4"></div>
+            <div class="cell" id="5"style="border-right: 0px"></div>
+            <div class="cell" id="6"style="border-left: 0px ; border-bottom:0px"></div>
+            <div class="cell" id="7"style="border-bottom:0px"></div>
+            <div class="cell" id="8"style="border-right: 0px ; border-bottom:0px"></div>
         </div>
         <div >
         <div class="restart">
