doesn't let player register any input after winning the match

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="starter">
-        <h1 style="font-size:100px;  color: gainsboro;">TIC-TAC-TOE</h1>
+        <h1  class="heading" style="font-size:100px;color: gainsboro;">TIC-TAC-TOE</h1>
         <div class="start">
             <button type="button" class="btn btn-light">START</button>
         </div>
