add strike-through for the winning row

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div class="cell" id="6"style="border-left: 0px ; border-bottom:0px"></div>
             <div class="cell" id="7"style="border-bottom:0px"></div>
             <div class="cell" id="8"style="border-right: 0px ; border-bottom:0px"></div>
+            <div></div>
         </div>
         <div >
         <div class="restart">
