--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>Tic-Tac-Toe</title>
 </head>
 <body>
     <div class="starter">
         <h1  class="heading" style="font-size:100px;color: gainsboro;">TIC-TAC-TOE</h1>
         <div class="start">
-            <button type="button" class="btn btn-light">START</button>
+            <div style="width:100%;text-align: center;">
+                <div class="symbol" style="font-size:50px;color: pink;">CHOOSE YOUR SYMBOL</div>
+                <button type="button" class="btnXO ">X</button>
+                <button type="button" class="btnXO ">O</button>
+            </div>
+            <div>
+                <button type="button" class="btn btn-light begin">START</button>
+            </div>
         </div>
     </div>
     <div class="center">
