toggle background color of symbol when player chooses input

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="start">
             <div style="width:100%;text-align: center;">
                 <div class="symbol" style="font-size:50px;color: pink;">CHOOSE YOUR SYMBOL</div>
-                <button type="button" class="btnXO ">X</button>
-                <button type="button" class="btnXO ">O</button>
+                <button type="button" class="btnXO btnX">X</button>
+                <button type="button" class="btnXO btnO">O</button>
             </div>
             <div>
                 <button type="button" class="btn btn-light begin">START</button>
